--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
     <div class="gallery">
       <img src="IMG_5640 copy.jpg" alt="Nursing Cap">
       <img src="photo_6165907633878463002_y.jpg" alt="Nursing Uniform">
-      <img src="photo_6165907633878462999_y.jpg" alt="Capping Ceremony">
-      <img src="images/yourgf.jpg" alt="Your Girlfriend">
+      <img src="photo_6165907633878463203_y.jpg" alt="Capping Ceremony">
+      <img src="photo_6165907633878463199_y.jpg" alt="Your Girlfriend">
     </div>
   </section>
 
